Fixed spacing of elements

--- a/myweb/src/App.css
+++ b/myweb/src/App.css
@@ -1,15 +1,19 @@
 #root {
   display: flex;
-  min-height: 100vh;
+  justify-content: center;
+  margin-right: 100px;
+  width:100vw;
   
   
   
 }
 .container{
   display: grid;
-  grid-template-columns: 180px 1020px auto;
+  text-align: center;
+  justify-content: space-evenly;
+  grid-template-columns: 150px 1050px;
   gap: 10px;
-  justify-items: center;
+
 }
 
 .container > div {
@@ -18,10 +22,12 @@
   font-size: 30px;
 }
 .info-bar{
-  
+  display:grid;
+  grid-template-columns: auto;
+  grid-template-rows: 50px 300px;
 }
 .section-contents{
-  background-color: gray;
-  width:50%;
+  background-color: rgb(59, 59, 59);
+  width:100%;
   margin:0;
 }
