--- a/myweb/src/components/Navbar.css
+++ b/myweb/src/components/Navbar.css
@@ -1,21 +1,25 @@
 .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor:pointer;
-  }
+
+  background-color: #333;
+  color: #fff;
+  display: grid;
+  grid-template-columns:auto;
+  grid-template-rows: auto auto auto;
+  text-align: center;
+    
+}
   
 .navbar a {
-    color: #fff;
-    text-decoration: none;
-    margin: 15px 0;
-    font-size: 18px;
-    cursor:pointer;
-  }
+  display: flex;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  cursor: pointer;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
   
 .navbar a:hover {
-    text-decoration: none;
-  }
+  text-decoration: underline;
+}
