--- a/myweb/src/pages/Blog.css
+++ b/myweb/src/pages/Blog.css
@@ -1,9 +1,12 @@
 .post{
-    background-color: rgb(95, 95, 95);
+    background-color: rgb(39, 39, 39);
     display: flex;
     flex-direction: column;
     margin:0 0 10px 0;
     flex-wrap:wrap;
+    border-style: solid;
+    border-color:black;
+    border-width: 3px;
     
 }
 .post-title{
